# Real-Time-Voice-Assistant

./: README.md  build.gradle.kts  gradle.properties  llm-config.gradle.kts
app/: build.gradle.kts  download.gradle  pushAppResources.py
app/src/androidTest/java/com/arm/voiceassistant/audio/: AudioRecorderTest.kt
app/src/androidTest/java/com/arm/voiceassistant/speech/: SpeechSynthesisTest.kt
app/src/androidTest/java/com/arm/voiceassistant/subscribers/: ResponseSubscriberTest.kt
app/src/androidTest/java/com/arm/voiceassistant/ui/: MainScreenUITest.kt  UiStateTest.kt
app/src/androidTest/java/com/arm/voiceassistant/utils/: ToastServiceInstrumentedTest.kt  UtilsTest.kt
app/src/androidTest/java/com/arm/voiceassistant/viewmodels/: ErrorMessageTest.kt  MainViewModelTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/arm/voiceassistant/: MainActivity.kt  Pipeline.kt  PipelineTimers.kt  ScreenScaffold.kt
app/src/main/java/com/arm/voiceassistant/audio/: AudioReader.kt  AudioRecorder.kt
app/src/main/java/com/arm/voiceassistant/speech/: AndroidTextToSpeechWrapper.kt  SpeechRecorder.kt  SpeechSynthesis.kt
app/src/main/java/com/arm/voiceassistant/subscribers/: ResponseSubscriber.kt
app/src/main/java/com/arm/voiceassistant/utils/: ChatMessage.kt  Common.kt  Constants.kt  CpuFeaturesUtility.kt  LlmBridge.kt  SystemStatusMonitor.kt  Timer.kt
app/src/model_configuration_files/: llamaTextConfigUser.json  llamaVisionConfigUser.json  mediapipeTextConfigUser.json  mnnTextConfigUser.json  mnnVisionConfigUser.json  onnxTextConfigUser.json  whisperConfigUser.json
gradle/: libs.versions.toml
llm/: CMakeLists.txt  build.gradle.kts
resources/images/: files.md
stt/: CMakeLists.txt  build.gradle.kts
(+21 files in other folders)
